Fix swiftlint
